remove javax.xml.bind Base64 instead